Finished lab8 -partner part

--- a/lab2/part2.html
+++ b/lab2/part2.html
@@ -26,7 +26,7 @@ src="../three.js-master/examples/js/loaders/GLTFLoader.js"></script>
 		scene.add(light);
 		
 		var loader = new THREE.GLTFLoader();
-		loader.load('dog.glb', function (gltf) {
+		loader.load('tree.glb', function (gltf) {
 		scene.add(gltf.scene);
 		gltf.scene.position.y = -50;
 		gltf.scene.rotation.z = 60;
